--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -5,11 +5,11 @@ ENV NODE_ENV=${NODE_ENV}
 
 WORKDIR /usr/src/app
 
-COPY api/package*.json ./
+COPY package*.json .
 
 RUN npm install
 
-COPY api/ .
+COPY . .
 
 RUN npm run build
 
